# cpp_environment

./: README.md
.github/workflows/: cmake_flag_build.yml
cmake_flag/: CMakeLists.txt  CMakePresets.json  main.cpp
dad_joke/: CMakeLists.txt  main.cpp
hello_library/: CMakeLists.txt  main.cpp
hello_library/math/include/: math_lib.h
hello_library/math/src/: math_lib.cpp
test_cpp_standards/: CMakeLists.txt  test_standards.cpp
